# the-ai-ear

./: README.md  pyproject.toml  requirements.txt
ai_ear/: __init__.py  __main__.py
ai_ear.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_ear/analyzers/: __init__.py  base.py  emotion.py  environment.py  music.py  speech.py
ai_ear/api/: __init__.py  server.py
ai_ear/core/: __init__.py  config.py  listener.py  memory.py  models.py  pipeline.py
ai_ear/utils/: __init__.py  audio.py
docs/: api_reference.md  architecture.md  configuration.md  deployment.md  extending.md  index.md  user_guide.md
examples/: basic_listening.py  enterprise_integration.py
tests/: test_analyzers.py  test_api.py  test_audio_utils.py  test_memory.py  test_models.py  test_pipeline.py  test_smoke.py
